# crypto-market-elt

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt-ci.yml  lint.yml
dags/: crypto_elt_backfill_pipeline.py  crypto_elt_daily_pipeline.py
dbt_project/: dbt_project.yml
dbt_project/models/marts/: dim_coins.sql  fact_coin_prices.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_coins_list.sql  stg_historical_prices.sql  stg_market_data.sql
extraction/: bigquery_loader.py  coingecko_extract.py  config.py  logger.py
