[project]
name = "crypto-market-elt"
version = "0.1.0"
description = ""
authors = [
    {name = "Glady T Davianus",email = "gladytdavianus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dbt-bigquery (>=1.11.3,<2.0.0)",
    "google-cloud-bigquery (>=3.42.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.2.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
